--- a/scss/default/_def.scss
+++ b/scss/default/_def.scss
@@ -55,7 +55,7 @@ label {
 }
 
 .txt {
-	font-family: sans-serif;
+	font-family: base.$fnt-all;
 	color: white;
 	cursor: default;
 }
@@ -102,5 +102,25 @@ label {
     100% {
         opacity: 1;
         transform: translateY(0px);
+    }
+}
+
+@keyframes open {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes open_blackout {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
