--- a/scss/elements/_carousel.scss
+++ b/scss/elements/_carousel.scss
@@ -80,6 +80,7 @@
         margin-left: -100%;
         box-sizing: border-box;
         transition: 0.5s;
+        animation-timing-function: base.$tf-main;
         position: relative;
         z-index: 2;
         overflow: hidden;
