--- a/scss/elements/_gameH.scss
+++ b/scss/elements/_gameH.scss
@@ -2,15 +2,19 @@
 
 .gameH {
     display: block;
+    // height: 100%;
     &__banner {
-        width: 100%;
+        height: 222px;
+        display: block;
+        // width: 100%;
         position: relative;
-        border-radius: 10px;
+        border-radius: 15px;
         // background-image: src('img/banner/img1.jpg');
         background-size: cover;
         transition: 0.15s;
         cursor: pointer;
         overflow: hidden;
+        animation-timing-function: base.$tf-main;
         &__glass {
             position: absolute;
             top: 0;
@@ -21,13 +25,21 @@
             border-radius: inherit;
             @include base.style-glass_game;
         }
-        & > img {
-            position: relative;
+        &__imgBlock {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
             z-index: 2;
-            border-radius: 10px;
-            height: 100%;
+            opacity: 1;
             transition: 0.15s;
+            & > img {
+                border-radius: 10px;
+                height: 100%;
+            }
         }
+        
         &__videoBlock {
             display: flex;
             align-items: center;
@@ -51,28 +63,25 @@
         &__discount {
             position: absolute;
             z-index: 4;
-            bottom: 4px;
-            left: 0;
-            padding: 4px 4px 0 0;
-            border-radius: 0 10px 0 10px;
-            background-color: base.$clr-main_body;
+            bottom: 8px;
+            right: 8px;
+            padding: 5px 8px 5px 8px;
+            border-radius: 7px;
             cursor: pointer;
             transition: .15s;
             opacity: 1;
-            &__inner {
-                padding: 5px 10px 5px 10px;
-                border-radius: 0 10px 0 10px;
-                background: base.$clr-grad_blue_100;
-                font-family: base.$fnt-all;
-                font-size: 15px;
-                font-weight: 700;
-                cursor: pointer;
-            }
+            font-family: base.$fnt-all;
+            font-size: 15px;
+            font-weight: 700;
+            background-color: rgba(255, 255, 255, .1);
+            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+            @include base.style-glass_active;
         }
     }
     &__info {
         position: relative;
-        padding-top: 8px;
+        padding-top: 10px;
         display: flex;
         justify-content: space-between;
         transition: 0.15s;
@@ -91,7 +100,7 @@
         &__buttons {
             right: 0;
             left: 0;
-            top: 4px;
+            top: 6px;
             position: absolute;
             z-index: 2;
             display: flex;
@@ -218,7 +227,7 @@
                     transition-delay: 1s;
                 }
             }
-            & img {
+            &__imgBlock {
                 opacity: 0;
                 transition-delay: 1s;
             }
