--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,14 @@
 @use "elements/carousel";
 @use "elements/gameV";
 @use "elements/gameH";
+@use "elements/blockButtonMore";
 @use "elements/salesHits";
 @use "elements/banner";
 @use "elements/offers";
+@use "elements/game_card/miniGameCard";
+@use "elements/game_card/bigImgBlock";
+@use "elements/game_card/forScroll";
+@use "elements/game_card/mainInfo";
+@use "elements/game_card/editions";
+@use "elements/game_card/information";
+@use "elements/game_card/similar";
