--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -6,6 +6,7 @@ $clr-blue_light: rgba(1, 162, 255, 1);
 $clr-blue_dark: rgba(1, 74, 255, 1);
 $clr-red: rgb(204, 30, 30);
 $clr-red_close: rgb(170, 22, 22);
+$clr-gray_light: rgba(45, 45, 45, 1);
 
 $clr-grad_blue_0: linear-gradient(to bottom, rgba(1, 162, 255, 0), rgba(1, 74, 255, 0));
 $clr-grad_blue_100: linear-gradient(to bottom, rgba(1, 162, 255, 1), rgba(1, 74, 255, 1));
@@ -137,6 +138,14 @@ $shadow_light: inset -1px 0 0 0px rgba(255, 255, 255, .25);
     // box-shadow: inset 0px -20px 40px -10px $clr-blue_light_glassShadow, $shadow_out;
 
     box-shadow: inset 0px -20px 40px -10px $clr-blue_light_glassShadow, $shadow_out, inset 0 0 0 1px $clr-blue_light;
+}
+
+@mixin information_game_style {
+    border: 2px solid rgb(50, 50, 50);
+    padding: 10px 20px 20px 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 25px -5px rgba(0, 0, 0, 0.3);
+    background: rgb(45, 45, 45);
 }
 
 @mixin absolute_zero {
