--- a/scss/elements/_footer.scss
+++ b/scss/elements/_footer.scss
@@ -11,12 +11,18 @@
 }
 
 .footer {
-    background-color: base.$clr-gray_37;
-    border-top: 1px solid base.$clr-gray_55;
+    // background-color: base.$clr-gray_37;
+    // border-top: 1px solid base.$clr-gray_55;
+    background-color: rgba(0, 0, 0, .1);
+    border-radius: 25px;
+    @include base.style_glass;
     margin-top: 50px;
+    margin-bottom: 8px;
+    margin-right: 8px;
+    margin-left: 8px;
     & > .inner {
         padding-top: 25px;
-        padding-bottom: 45px;
+        padding-bottom: 25px;
     }
     &__separator {
         width: 100%;
@@ -59,9 +65,10 @@
             }
         }
         & > button {
-            background-color: base.$clr-gray_43;
-            border: 1px solid base.$clr-gray_55;
-            border-radius: 7px;
+            // background-color: base.$clr-gray_43;
+            // border: 1px solid base.$clr-gray_55;
+            background-color: rgba(255, 255, 255, .05);
+            border-radius: 22px;
 
             height: 45px;
             padding-left: 15px;
@@ -71,6 +78,7 @@
             font-weight: 700;
             cursor: pointer;
             transition: .2s;
+            @include base.style_glass_hover;
             &:hover {
                 background-color: base.$clr-gray_47_hover;
             }
@@ -105,12 +113,14 @@
                     justify-content: center;
                     gap: 7px;
 
-                    width: 115px;
-                    height: 65px;
-                    border-radius: 7px;
+                    width: 125px;
+                    height: 75px;
+                    border-radius: 15px;
 
-                    background-color: base.$clr-gray_43;
-                    border: 1px solid base.$clr-gray_55;
+                    // background-color: base.$clr-gray_43;
+                    // border: 1px solid base.$clr-gray_55;
+                    background-color: rgba(255, 255, 255, .05);
+                    @include base.style_glass_hover;
                     cursor: pointer;
                     transition: .2s;
                     & > img {
@@ -146,13 +156,17 @@
         &__info {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             &__copyright {
                 font-size: 14px;
                 color: rgb(138, 138, 138);
             }
             &__banks {
+                display: flex;
+                align-items: center;
+                height: 28px;
                 & > img {
-                    height: 28px;
+                    height: 100%;
                 }
             }
         }
