--- a/scss/elements/_header.scss
+++ b/scss/elements/_header.scss
@@ -12,20 +12,166 @@
     &__bg {
         position: absolute;
         top: 0;
-        bottom: 0;
+        bottom: 0px;
         right: 0;
         left: 0;
         z-index: 1;
         border-radius: 25px;
-        background-color: rgba(56, 56, 56, 0.8);
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
+        background-color: rgba(56, 56, 56, 0.5);
+        // -webkit-backdrop-filter: blur(10px);
+        // backdrop-filter: blur(10px);
         // border-bottom: 1px solid rgba(255, 255, 255, 0.5);
         // box-shadow: 0 0 40px -2px rgba(0, 0, 0, 0.5);
         // background-color: rgba(255, 255, 255, .1);
         @include base.style-glass;
         opacity: 0;
         transition: 0.5s;
+        overflow: hidden;
+        &__top {
+            padding-top: 1px;
+            height: 39px;
+            & > div {
+                width: 100%;
+                height: 2px;
+                // background-color: rgba(255, 255, 255, .05);
+                -webkit-backdrop-filter: blur(70px);
+                backdrop-filter: blur(70px);
+                &:nth-child(20) {
+                    opacity: 0;
+                }
+                &:nth-child(19) {
+                    opacity: .1;
+                }
+                &:nth-child(18) {
+                    opacity: .15;
+                }
+                &:nth-child(17) {
+                    opacity: .2;
+                }
+                &:nth-child(16) {
+                    opacity: .25;
+                }
+                &:nth-child(15) {
+                    opacity: .3;
+                }
+                &:nth-child(14) {
+                    opacity: .35;
+                }
+                &:nth-child(13) {
+                    opacity: .4;
+                }
+                &:nth-child(12) {
+                    opacity: .45;
+                }
+                &:nth-child(11) {
+                    opacity: .5;
+                }
+                &:nth-child(10) {
+                    opacity: .55;
+                }
+                &:nth-child(9) {
+                    opacity: .6;
+                }
+                &:nth-child(8) {
+                    opacity: .65;
+                }
+                &:nth-child(7) {
+                    opacity: .7;
+                }
+                &:nth-child(6) {
+                    opacity: .75;
+                }
+                &:nth-child(5) {
+                    opacity: .8;
+                }
+                &:nth-child(4) {
+                    opacity: .85;
+                }
+                &:nth-child(3) {
+                    opacity: .9;
+                }
+                &:nth-child(2) {
+                    opacity: .95;
+                }
+                &:nth-child(1) {
+                    opacity: 1;
+                }
+            }
+        }
+        &__center {
+            height: 0px;
+        }
+        &__bottom {
+            padding-bottom: 1px;
+            height: 39px;
+            & > div {
+                width: 100%;
+                height: 2px;
+                background-color: rgba(255, 255, 255, .05);
+                -webkit-backdrop-filter: blur(70px);
+                backdrop-filter: blur(70px);
+                &:nth-child(1) {
+                    opacity: .1;
+                }
+                &:nth-child(2) {
+                    opacity: .1;
+                }
+                &:nth-child(3) {
+                    opacity: .15;
+                }
+                &:nth-child(4) {
+                    opacity: .2;
+                }
+                &:nth-child(5) {
+                    opacity: .25;
+                }
+                &:nth-child(6) {
+                    opacity: .3;
+                }
+                &:nth-child(7) {
+                    opacity: .35;
+                }
+                &:nth-child(8) {
+                    opacity: .4;
+                }
+                &:nth-child(9) {
+                    opacity: .45;
+                }
+                &:nth-child(10) {
+                    opacity: .5;
+                }
+                &:nth-child(11) {
+                    opacity: .55;
+                }
+                &:nth-child(12) {
+                    opacity: .6;
+                }
+                &:nth-child(13) {
+                    opacity: .65;
+                }
+                &:nth-child(14) {
+                    opacity: .7;
+                }
+                &:nth-child(15) {
+                    opacity: .75;
+                }
+                &:nth-child(16) {
+                    opacity: .8;
+                }
+                &:nth-child(17) {
+                    opacity: .85;
+                }
+                &:nth-child(18) {
+                    opacity: .9;
+                }
+                &:nth-child(19) {
+                    opacity: .95;
+                }
+                &:nth-child(20) {
+                    opacity: 1;
+                }
+            }
+        }
     }
     &__left {
         width: 100%;
@@ -218,8 +364,8 @@
         // -webkit-backdrop-filter: blur(30px);
         // backdrop-filter: blur(30px);
         background-color: rgba(56, 56, 56, 0.8);
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
         transition: 0.15s;
         box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
         // border: 1px solid rgba(255, 255, 255, 0.2);
@@ -229,7 +375,7 @@
         transform: translateY(0px);
         @include base.style-glass;
         &__head {
-            border-radius: 7px;
+            border-radius: 10px;
             // background: rgba(16, 16, 16, 0.30);
             background: rgba(255, 255, 255, 0.05);
             display: flex;
@@ -263,7 +409,7 @@
             margin-top: 10px;
             margin-bottom: 10px;
             &__nav {
-                border-radius: 7px;
+                border-radius: 10px;
                 // background: rgba(16, 16, 16, 0.30);
                 background: rgba(255, 255, 255, 0.05);
                 font-family: base.$fnt-all;
