--- a/scss/elements/game_card/_mainInfo.scss
+++ b/scss/elements/game_card/_mainInfo.scss
@@ -281,7 +281,7 @@
                     align-items: center;
                     justify-content: center;
                     height: 100%;
-                    border-radius: 10px;
+                    border-radius: 15px;
                     font-size: 26px;
                     font-weight: 600;
                     // background-color: rgb(58, 58, 58);
@@ -295,7 +295,7 @@
                     align-items: center;
                     justify-content: center;
                     // border: 2px solid rgb(152, 152, 152);
-                    border-radius: 10px;
+                    border-radius: 15px; //! 10 old
                     font-size: 26px;
                     font-weight: 600;
                     // background-color: rgb(58, 58, 58);
@@ -317,7 +317,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    border-radius: 10px;
+                    border-radius: 15px;
                     // background-color: rgb(58, 58, 58);
                     background-color: rgba(255, 255, 255, .05);
                     cursor: pointer;
@@ -358,7 +358,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    border-radius: 10px;
+                    border-radius: 15px;
                     background: base.$clr-grad_blue_100;
                     cursor: pointer;
                     transition: 0.15s;
@@ -399,7 +399,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    border-radius: 10px;
+                    border-radius: 15px;
                     background-color: rgba(255, 255, 255, .05);
                     cursor: pointer;
                     transition: 0.15s;
