--- a/scss/elements/index/_banner.scss
+++ b/scss/elements/index/_banner.scss
@@ -1,118 +1,21 @@
-@use '../default/base';
+@use '../../default/base';
 
-.carousel {
-    display: flex;
-    padding: 100px 150px 15px 150px;
-    position: relative;
-    &__bg {
-        @include base.absolute-zero;
-        transition: 1s;
-        opacity: 0;
-        filter: blur(50px);
-        & > img {
-            width: 100%;
-            height: 100%;
-        }
-        &_active {
-            opacity: 0.4;
-        }
-    }
-    &__buttons {
-        position: absolute;
-        bottom: 45px;
-        right: 175px;
-        z-index: 8;
-
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-
-        padding: 15px;
-        &__button {
-            width: 55px;
-            height: 55px;
-            padding: 16px;
-            background-color: rgba(255, 255, 255, 0.1);
-            -webkit-backdrop-filter: blur(30px);
-            backdrop-filter: blur(30px);
-            // border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            transition: .15s;
-            cursor: pointer;
-            & > img {
-                width: 100%;
-                filter: invert(1);
-            }
-            &:nth-child(1) img {
-                transform: rotate(180deg) translateX(2px);
-            }
-            // &:hover {
-            //     background-color: rgba(255, 255, 255, 0.2);
-            // }
-            @include base.style-glass_hover;
-            &:active {
-                transform: scale(0.95);
-            }
-            &_disactive {
-                cursor: default;
-                opacity: 0.5;
-                &:hover {
-                    background-color: rgba(255, 255, 255, 0.1);
-                }
-                &:active {
-                    transform: scale(1);
-                }
-            }
-        }
-    }
-    &__grid {
-        width: 100%;
-        display: flex;
-        position: relative;
-    }
-    &__gridBG {
-        @include base.pos_absolute(-100px, 0px, -100px, 0px);
-        z-index: 1;
-    }
-    &__banner {
-        width: 100%;
-        height: 515px;
-        margin-left: -100%;
+.banner {
+    &__game {
         box-sizing: border-box;
-        transition: 0.5s;
-        animation-timing-function: base.$tf-main;
-        position: relative;
-        z-index: 2;
-        overflow: hidden;
+        padding: 20px 150px 15px 150px;
         &__imgBlock {
             width: 100%;
-            height: 100%;
             border-radius: 25px;
-            position: relative;
-            // border: 2px solid rgba(255, 255, 255, 0.1);
-            // box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.2);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.2);
             overflow: hidden;
-            &__glass {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                right: 0;
-                left: 0;
-                z-index: 2;
-                border-radius: 25px;
-                @include base.style-glass_banner;
-            }
             & > img {
-                position: relative;
-                z-index: 1;
                 width: 100%;
                 display: block;
-                transition: 0.3s;
             }
         }
         &__interaction {
-            position: relative;
-            z-index: 3;
             transform: translateY(-100%);
             padding-left: 25px;
             padding-bottom: 25px;
@@ -177,14 +80,14 @@
                             &:active {
                                 transform: scale(0.95);
                             }
-                            &_active.banner__interaction__info__shopInfo__buttons__button_favorite {
-                                // background-color: base.$lightRed;
-                                // ! background: base.$redGradient;
-                            }
-                            &_active.banner__interaction__info__shopInfo__buttons__button_basket {
-                                // background-color: base.$lightBlue;
-                                // ! background: base.$mainGradient_100;
-                            }
+                            // &_active.banner__interaction__info__shopInfo__buttons__button_favorite {
+                            //     // background-color: base.$lightRed;
+                            //     // ! background: base.$redGradient;
+                            // }
+                            // &_active.banner__interaction__info__shopInfo__buttons__button_basket {
+                            //     // background-color: base.$lightBlue;
+                            //     // ! background: base.$mainGradient_100;
+                            // }
                             @include base.style-glass_hover;
                         }
                     }
@@ -238,4 +141,5 @@
             }
         }
     }
+    
 }
