--- a/scss/elements/index/_offers.scss
+++ b/scss/elements/index/_offers.scss
@@ -1,4 +1,4 @@
-@use '../default/base';
+@use '../../default/base';
 
 .offers {
     padding: 20px 150px 15px 150px;
@@ -12,7 +12,7 @@
             position: relative;
             padding: 12px 16px 12px 16px;
             cursor: pointer;
-            border-radius: 21px;
+            border-radius: 23px;
             background-color: rgba(255, 255, 255, .05);
             @include base.style-glass_hover;
             transition: .2s;
